# polymarket-1

./: .env.example  .gitignore  =1.0.0  CRON-SETUP.md  README.md  config.crypto.yaml  config.example.yaml  config.us-election.yaml  config.yaml  pyproject.toml  requirements.txt  run_political_bias_scan.sh
docs/: geographical-filtering.md
docs/plans/: 2026-02-13-bias-scanner-implementation.md  2026-02-13-bias-scanner-redesign.md
output/: report_2026-01-31_201629.md  report_2026-01-31_204824.md  report_2026-02-01_204819.md
polymarket_agent/: __init__.py  agent.py  bias_reporting.py  config.py  main.py  scan.py  scanner.py  scanner_config.py
polymarket_agent/analysis/: __init__.py  demographic_bias.py  reasoning_classifier.py  spread_analysis.py
polymarket_agent/bias_detection/: __init__.py  classifier.py  models.py
polymarket_agent/data_fetching/: __init__.py  clob_api.py  gamma_api.py  models.py
polymarket_agent/enrichment/: __init__.py  web_search.py
polymarket_agent/filtering/: __init__.py  filters.py
polymarket_agent/llm_assessment/: __init__.py  assessor.py  consensus.py  prompts.py  providers.py
polymarket_agent/reporting/: __init__.py  reporter.py
polymarket_agent/scoring/: __init__.py  scorer.py
polymarket_agent/storage/: database.py
polymarket_agent/utils/: __init__.py  helpers.py
scripts/: backtest.py  list_tags.py
tests/: __init__.py  test_bias_detection.py  test_bias_llm.py  test_bias_reporting.py  test_consensus.py  test_database.py  test_filtering.py  test_llm_assessment.py  test_llm_retry.py  test_models.py  test_polling.py  test_scanner.py  test_scanner_config.py  test_scoring.py  test_spread_analysis.py
